<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.hyrt.cnp.account.LoginActivity"
    android:background="@drawable/bg"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:layout_gravity="center" android:layout_marginTop="@dimen/user_login_logo_margintop"
        android:background="@drawable/logo"/>

    <EditText style="@style/EditText"
        android:hint="@string/username" android:layout_marginTop="@dimen/user_login_nameet_margintop"
        android:id="@+id/login_name_et" />

    <EditText style="@style/EditText" android:password="true"
        android:hint="@string/password" android:layout_marginTop="@dimen/user_login_et_margintop"
        android:id="@+id/login_password_et" />

    <Button
        style="@style/Button"
        android:text="@string/login"
        android:id="@+id/login_btn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/imageview_super_small"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_none_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_tv_1"
            android:textColor="#ff3333"
            android:layout_marginLeft="0dp"/>
        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_gradual_line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_tv_1"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="0dp"
            android:text="@string/get_account_prompt"/>
    </LinearLayout>
</LinearLayout>
